[package]
name = "eafutil"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4", features = ["wrap_help"]}
csv =  "1.2.2"
time = "0.3.22"
walkdir = "2"
regex = "1.8.4"
unicode-normalization = "0.1.19"
itertools = "0.11"
termcolor = "1.1"
eaf-rs = {git = "https://github.com/jenslar/eaf-rs.git"}
# textgrid-rs = {path="../lib/textgrid-rs"}
