[package]
name = "eafutil"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5", features = ["wrap_help"]}
csv =  "1.2.2"
time = {version = "0.3.33", features = ["formatting"]}
walkdir = "2"
regex = "1.8.4"
unicode-normalization = "0.1.19"
itertools = "0.13"
termcolor = "1.1"
eaf-rs = {git = "https://github.com/jenslar/eaf-rs.git"}
mp4iter = {git = "https://github.com/jenslar/mp4iter.git"}
rttm-rs = {git = "https://github.com/jenslar/rttm-rs.git"}
textgrid-rs = {git = "https://github.com/jenslar/textgrid-rs"}
inquire = "0.7.5" # currently not used...
serde = "1.0.204"
serde_json = "1.0.120"
